# TeMACLE

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  requirements.txt  scripts.py
AutoCellLibX/: Astran.py  BLIFGNNTraining.py  BLIFGraphUtil.py  BLIFPatternGrowth.py  BLIFPreProc.py  GDSIIAnalysis.py  GNNModel.py  iCell.py  main.py  main_oriPatternCombination.py  resultAnalysis.py  resultAnalysisCountTops.py  spice.py
AutoCellLibX/originalAstranStdCells/: AND2X1.Astranlog  AND2X1.gds  AND2X2.Astranlog  AND2X2.gds  AND2X2.run  AOI21X1.Astranlog  AOI21X1.gds  AOI21X1.run  AOI22X1.Astranlog  AOI22X1.run  BUFX2.Astranlog  BUFX2.gds  BUFX2.run  BUFX4.Astranlog  BUFX4.gds  BUFX4.run  CLKBUF1.Astranlog  CLKBUF1.gds  CLKBUF1.run  CLKBUF2.Astranlog  CLKBUF2.gds  CLKBUF2.run  CLKBUF3.Astranlog  CLKBUF3.gds  CLKBUF3.run  DFFNEGX1.Astranlog  DFFNEGX1.gds  DFFNEGX1.run  DFFPOSX1.Astranlog  DFFPOSX1.gds  DFFPOSX1.run  DFFSR.Astranlog  DFFSR.gds  DFFSR.run  FAX1.gds  HAX1.run  INVX1.Astranlog  INVX1.gds  INVX1.run  INVX2.Astranlog  (+46 more)
AutoCellLibX/pySrc/: Astran.py  BLIFGraphUtil.py  GDSIIAnalysis.py  main.py  main_oriPatternCombination.py
AutoCellLibX/tools/gurobi/: CMakeLists.txt
benchmark/: batchSynthesis.py  syn.ys
benchmark/adder/: adder.genlib  adder.lib  asap7_75t_L.genlib  full_adder_128.v  full_adder_16.v  full_adder_256.v  full_adder_32.v  full_adder_4.v  full_adder_64.v  full_adder_tb.v
benchmark/aig/: adder.aig
src/: Astran.py  BLIFFSM.py  BLIFGraphUtil.py  BLIFPreProc.py  GDSIIAnalysis.py  iCell.py  main.py  spice.py
stdCellLib/: cell2spice.pl
stdCelllib/: gscl45nm.lib
tools/: CMakeLists.txt  synthesis.cpp
tools/astran/Astran/src/: circuit.cpp  compaction.cpp  designmng.cpp  util.h
tools/astran/wxSightGL/nbproject/: Makefile-Release.mk
tools/astran/wxSightGL/src/: app.cpp
tools/config/: setup_common.py  setup_layout.py  setup_lib.py
tools/iCell/: README.md  iCell_0819  run.sh
tools/iCell/_internal/: libscip-bb3468de.so.9.0
tools/iCell/_internal/lib/gdk-pixbuf/: loaders.cache
tools/iCell/_internal/share/glib-2.0/schemas/: gschemas.compiled
(+7332 files in other folders)
